@@ -1321,6 +1321,8 @@ name|query
 operator|.
 name|minNrShouldMatch
 argument_list|)
+argument_list|,
+name|needsScores
 argument_list|)
 return|;
 block|}
